--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.25.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-notifications-component": "^3.4.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
